# local_image_db

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  copy.rs  db.rs  hasher.rs  main.rs  models.rs  progress.rs  scanner.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
