[package]
name = "local_image_db"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
rayon = "1"
blake3 = "1"
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
indicatif = { version = "0.17", features = ["rayon"] }
directories = "5"
ratatui     = { version = "0.30", features = ["crossterm"] }
crossterm   = "0.29"
